--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,42 @@
 }
 .footerLogIn {
     text-align: center;
-    margin-top:375px
+    position:absolute;
+    bottom:0;
+    left:0;
+    right:0;
+}
+#loginDiv {
+    position: absolute;
+    visibility: hidden;
+    top:50px; margin-left: auto;
+    margin-right: auto;
+    left:0;
+    right:0;
+}
+#signupDiv {
+    position: absolute;
+    visibility: hidden;
+    top:50px; margin-left: auto;
+    margin-right: auto;
+    left:0;
+    right:0;
+}
+#loginLink {
+    font-family: 'Courier', 'Sans';
+    text-decoration: underline;
+}
+#createAcctLink {
+    font-family: 'Courier', 'Sans';
+    text-decoration: underline;
+}
+#loginLink:hover {
+    color: var(--light2);
+    cursor: pointer;
+}
+#createAcctLink:hover {
+    color: var(--light2);
+    cursor: pointer;
 }
 body {
     font-size: 1em;
@@ -80,10 +115,18 @@ body {
     left: 0;
     right: 0;
     text-align: center;
-    visibility: hidden;
     font-family: 'Courier', 'Sans';
 }
-
+.acctDetails {
+    font-family: 'Courier', 'Sans';
+    font-size: 25px;
+    display: inline;
+    position:relative;
+}
+#userInfo {
+    position: relative;
+    left:25px;
+}
 .footerImage {
     display:inline;
     height:5%;
