--- a/public/style.css
+++ b/public/style.css
@@ -52,11 +52,12 @@
     font-family: 'Courier', 'Sans';
     text-decoration: underline;
 }
-#loginLink:hover {
+#loginLink:hover, #loginLink:focus {
     color: var(--light2);
     cursor: pointer;
 }
-#createAcctLink:hover {
+
+#createAcctLink:hover, #createAcctLink:focus {
     color: var(--light2);
     cursor: pointer;
 }
@@ -66,10 +67,8 @@ body {
     font-family: Arial, Sans-serif;
     color: #000000;
     text-align: left;
-}
-.inputDiv {
-    display:flex;
-    justify-content: center;
+    width: 100%;
+    margin:0;
 }
 .titleDiv {
     text-align:center;
@@ -129,7 +128,7 @@ body {
 }
 .footerImage {
     display:inline;
-    height:5%;
+    height:40px;
 }
 #welcome {
     font-family: "liebedoris", sans-serif;
@@ -164,7 +163,7 @@ body {
     justify-content: center;
     align-items: center;
 }
-.button:hover {
+.button:hover, .button:focus {
     background-color: var(--light2);
 }
 /* Footer */
@@ -201,14 +200,14 @@ body {
     transition: opacity 0.25s;
     border-radius: 10%;
 }
-#steakCornOverlay:hover {
+#steakCornOverlay:hover, #steakCornOverlay:focus {
     opacity:1;
 }
 #steakCornOverlay > * {
     transform:translateY(20px);
     transition: transform 0.25s;
 }
-#steakCornOverlay:hover > * {
+#steakCornOverlay:hover > *, #steakCornOverlay:focus > * {
     transform: translateY(0);
 }
 #steakCornTitle {
@@ -248,14 +247,14 @@ body {
     transition: opacity 0.25s;
     border-radius: 10%;
 }
-#eggSaltOverlay:hover {
+#eggSaltOverlay:hover, #eggSaltOverlay:focus {
     opacity:1;
 }
 #eggSaltOverlay > * {
     transform:translateY(20px);
     transition: transform 0.25s;
 }
-#eggSaltOverlay:hover > * {
+#eggSaltOverlay:hover > *, #eggSaltOverlay:focus > * {
     transform: translateY(0);
 }
 #eggSaltTitle {
@@ -296,14 +295,14 @@ body {
     transition: opacity 0.25s;
     border-radius: 10%;
 }
-#donutOverlay:hover {
+#donutOverlay:hover, #donutOverlay:focus {
     opacity:1;
 }
 #donutOverlay > * {
     transform:translateY(20px);
     transition: transform 0.25s;
 }
-#donutOverlay:hover > * {
+#donutOverlay:hover > *, #donutOverlay:focus > * {
     transform: translateY(0);
 }
 #donutTitle {
@@ -315,9 +314,12 @@ body {
     margin-top:0.25em;
 }
 /* INPUT */
+.inputDiv {
+}
 .input {
+    margin:auto;
     display: block;
-    width:200px;
+    width:400px;
     height:50px;
     text-align: center;
     font-size: 20px;
@@ -330,9 +332,9 @@ body {
 }
 
 /* NAV */
-.nav:hover {
+.nav:hover, .nav:focus {
     color: var(--light2);
 }
-a:hover {
+a:hover, a:focus {
     color: var(--light2)
 }
