--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,7 @@
     display:flex;
     justify-content: center;
 }
-.footerLogIn {
+.footer {
     text-align: center;
     position:absolute;
     bottom:0;
@@ -314,8 +314,6 @@ body {
     margin-top:0.25em;
 }
 /* INPUT */
-.inputDiv {
-}
 .input {
     margin:auto;
     display: block;
