--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,65 @@
     --dark2: #213953;
     --black: #101A24;
 }
+#aboutMeDiv {
+    height:425px;
+}
+#codyDiv {
+    display:inline;
+}
+#codyPic {
+    height: 400px;
+    border-radius: 10px;
+    margin-left: 250px;
+}
+#aboutMeText {
+    position:relative;
+    display:inline-block;
+    max-width: 225px;
+    left: 50px;
+    bottom: 15px;
+    text-align: left;
+}
+#videoDiv {
+    display: inline-block;
+    position:relative;
+    left: 200px;
+}
+#aboutMeDiv > button {
+    scale:50%;
+    display:block;
+    margin-top: 5px;
+    margin-right: 0px;
+    position: relative;
+    left:1150px;
+    bottom:350px;
+}
+#videoControlDiv {
+    display:inline;
+}
+#myVideo {
+    height:400px;
+    position:relative;
+}
+#clock {
+    display:inline;
+    vertical-align: 10px;
+    margin-right: 20px;
+    font-family: 'Courier', 'Sans';
+}
+.generalTitle {
+    font-family: "liebedoris", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 40px;
+    color:var(--dark2);
+    text-align: center;
+}
+.generalText {
+    font-family: 'Courier', 'Sans';
+    color:var(--black);
+    text-align: center;
+}
 #nav {
     display: flex;
     flex-direction: row;
@@ -21,12 +80,24 @@
     display:flex;
     justify-content: center;
 }
+.seperator {
+    margin-top:25px;
+}
 .footer {
     text-align: center;
     position:absolute;
     bottom:0;
     left:0;
     right:0;
+    margin-top: auto;
+}
+.footerAcct {
+    text-align: center;
+    position:relative;
+    bottom:0;
+    left:0;
+    right:0;
+    margin-top: auto;
 }
 #loginDiv {
     position: absolute;
@@ -98,6 +169,7 @@ body {
     text-align:center;
     vertical-align: 10px;
     margin-right: 20px;
+    font-family: 'Courier', 'Sans';
 }
 #createAcctErrorDiv {
     margin-top:50px;
@@ -115,16 +187,42 @@ body {
 .acctDetails {
     font-family: 'Courier', 'Sans';
     font-size: 25px;
-    display: inline;
-    position:relative;
+    display:inline;
+    vertical-align: middle;
 }
-#userInfo {
+.acctDetailsDiv {
+    display: inline;
+}
+#emailDiv {
+    margin-left: 25px;
+    position:absolute;
+}
+#userEmail {
+    position:relative;
+    margin-left: 10px;
+}
+#changeProfilePicButtonDiv {
+    gap: 0px;
+}
+#profilePic {
+    height:20%;
     position: relative;
-    left:25px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+#planTable > td, th, td {
+    border:1px solid black;
+}
+#planTable {
+    width: 60%;
+    margin-left:20%;
 }
 .footerImage {
     display:inline;
     height:40px;
+}
+.footerImage:hover {
+    cursor: pointer;
 }
 #welcome {
     font-family: "liebedoris", sans-serif;
